# C__ClearVolume

./: .gitignore  CMakeLists.txt  README.md  filesizecounter.cpp  filesizecounter.h  functions.cpp  functions.h  loadingscreen.cpp  loadingscreen.h  main.cpp  mainwindow.cpp  mainwindow.h
uis/: loadingscreen.ui  mainWindow.ui
